# LearnC

./: Embedded_dev_notes.md  ReadMe
0.tools/: tmux.conf
1.Demo/: 19.get_kernel_ver.c  20.long_jmp.c  21.get_rss.c  22.cpu_mem_query.c  24.variable_parameters.c  25.atomic_ops_demo.c  9.printf_color.c
1.Demo/1.getopt/: getopt.c  getopt_long.c
1.Demo/1.syntax_interface/: 11.system.c  13.printf_color.c  14.long_jmp.c  16.array.c  9.variable_parameters.c
1.Demo/1.syntax_interface/1.getopt/: getopt.c  getopt_long.c
1.Demo/1.syntax_interface/10.convert/: atoi.c  demo.c
1.Demo/1.syntax_interface/15.memory_allocation/: readme.md
1.Demo/1.syntax_interface/15.memory_allocation/1.allocation_strategy/: 1.implicit_free_list.c  2.explicit_free_list.c  3.segregated_fits.c  4.slab_style_fixed_size_bins.c  readme.md
1.Demo/1.syntax_interface/15.memory_allocation/2.mem_pool_c/: readme.md
1.Demo/1.syntax_interface/15.memory_allocation/3.mem_pool_cxx/: CMakeLists.txt  prjBuild.sh  readme.md
1.Demo/1.syntax_interface/2.environment/: envOpt.c
1.Demo/1.syntax_interface/3.Thread/: 7.thread_priority.c
1.Demo/1.syntax_interface/3.Thread/1.create_stop/: 1.thread_create.c  2.thread_stop.c  3.thread_join.c  4.thread_detach.c
1.Demo/1.syntax_interface/3.Thread/2.mutex/: 1.thread_mutex.c  2.thread_mutex_CXX.cpp
1.Demo/1.syntax_interface/3.Thread/4.semaphore/: readme.md  semaphore.c
1.Demo/1.syntax_interface/4.Process/: 2.shm.c  6.dup2.c  7.popen.c  8.thread_sem.c
1.Demo/1.syntax_interface/4.Process/1.create_stop/: 1.fork.c  3.wait.c  3.wait_2.c  3.wait_zombie.c  4.sigusr1.c
1.Demo/1.syntax_interface/7.file_dir_opt/: create_file.c  dir.c  mkstemp.c  rw_cfg.c
1.Demo/1.syntax_interface/8.atomic_ops/: readme.md
1.Demo/13.ASan/: CMakeLists.txt  Makefile  asan_demo.cpp
1.Demo/16.genlib/: hello.c
1.Demo/2.compile_run/: 4.printStack.c
1.Demo/2.compile_run/2.compile_time_printing/: demo.c
1.Demo/2.compile_run/4.dump_stack/: dump_stack.c  prjBuild.sh
1.Demo/2.compile_run/5.compile_step/: build.sh  main.c
1.Demo/2.environment/: prnEnv.c  prnEnv2.c
1.Demo/23.git/branch_manager/: ReadMe.md  setup_repo.sh
1.Demo/25.atomic_ops/: demo.c
1.Demo/26.compile_time_printing/: Makefile
1.Demo/27.daemon/: CMakeLists.txt  kill_all.sh  prjBuild.sh
1.Demo/27.daemon/daemon/: CMakeLists.txt  daemon.c  daemon_guard.c
1.Demo/27.daemon/doc/: readme.md
1.Demo/27.daemon/mlib/: mlib.c  mlib.h
1.Demo/27.daemon/mlibcpp/: CMakeLists.txt  mlibcpp.cpp  mlibcpp.h
1.Demo/27.daemon/worker/: CMakeLists.txt  worker.cpp  worker2.cpp
1.Demo/28.iterator/: iterator.c  iterator.cpp
1.Demo/29.xml_json_yaml/demos/: json_demo.c  xml_demo.cpp
1.Demo/3.Thread/: 7.thread_priority.c
1.Demo/3.Thread/1.create_stop/: 1.thread_create.c  2.thread_stop.c  3.thread_join.c  4.thread_detach.c
1.Demo/3.Thread/2.mutex/: 1.thread_mutex.c  2.thread_mutex_CXX.cpp
1.Demo/3.Thread/3.cond/: 1.thread_cond.c
1.Demo/3.Thread/4.semaphore/: demo.c  demo2.c
1.Demo/3.Thread/5.thread_pool/: 1.thread_pool.c
1.Demo/3.tools/1.daemon/: kill_all.sh  prjBuild.sh
1.Demo/3.tools/3.ASan/: Makefile  asan_demo.c
1.Demo/3.tools/4.xml_json_yaml/: CMakeLists.txt  prjBuild.sh  readme.md
1.Demo/3.tools/4.xml_json_yaml/demos/: json_demo.cpp  xml_demo.c  yaml_demo.c  yaml_demo.cpp
1.Demo/3.tools/5.time/: timer_create.c
1.Demo/3.tools/6.sys_info/: 1.cpu_mem_query.c  2.get_kernel_ver.c  3.get_rss.c
1.Demo/3.tools/8.blackbox/: Makefile  blackbox.c  blackbox.h  main.c
1.Demo/4.Process/: 2.shm.c  6.dup2.c  8.thread_sem.c  ReadMe.md
1.Demo/4.Process/1.create_stop/: 1.fork.c  1.fork_2.c  2.exec.c  3.wait.c  3.wait_2.c  3.wait_zombie.c  4.sigusr1.c
1.Demo/4.Process/3.mmap/: mmap_read.c  prjBuild.sh
1.Demo/4.Process/4.socket/: 3.socket-inet.c  Makefile  ReadMe.md
1.Demo/4.Process/9.semaphore/: demo2.c
1.Demo/5.net/tcp/: client.c
1.Demo/7.time/: _clock_time.c  _gettimeofday.c  settimer.c  time_func.c  timefd_create.c  timer_create2.c
1.base/: ReadMe
1.base/1.getopt/: main.c
1.base/2.getopt_long/: a.out  main.c
1.base/4.mkstemp/: main.c
1.base/5.print_pid/: main.c
1.base/6.system/: main.c
1.base/7.time/: time.c
1.base/getopt_long/: main.c
2.Thread/: 2.2.thread_cond.c
2.doc/: 0.1.tools_general.md  0.2.tools_debug.md  0.3.tools_perf.md  0.4.tools_net.md  2.1.c_language.md  2.2.asm.md  3.elf.md  7.buildroot.md  8.docker.md  9.gerrit_server.md
Process/: 1.1.Process.cpp  2.3.popen.c
Thread/: 1.1.thread.cpp  1.1.thread_create.c  1.2.thread.cpp  1.2.thread_stop.c  1.3.thread.cpp  1.3.thread_join.c  1.4.thread.cpp  1.4.thread_detach.c  2.1.thread_mutex.c  2.1.thread_mutex.cpp  2.1.thread_mutex_CXX.cpp  2.2.thread_cond.c  2.2.thread_cond_wait_time.c  2.3.thread_sem.c
doc/: 0.tools.md  1.arm_kernel_and_framework.md  2.c_language_base.md  3.u_boot_transplant.md  4.linux_kernel.md  7.buildroot.md  waiting_to_finish.md
(+53 files in other folders)
